[package]
name = "pi_store"
version = "0.1.0"
authors = ["zmythleo <zmythleo@gmail.com>"]
edition = "2018"

[dependencies]
futures = "0.3"
json = "0.11.13"
log = "0.4"
crc = "*"
bytes = "1.0"
lazy_static = "*"
fnv = "1.0.3"
tempdir = "0.3"
rand = "*"
crossbeam-channel = "0.5"
flume = "0.10"
pi_hash_value = "0.1"
pi_bon = "0.1"
pi_handler = "0.1"
pi_atom = "0.1"
pi_gray = "0.1"
pi_guid = "0.1"
pi_util = "0.1"
pi_sinfo = "0.1"
pi_timer = "0.1"
pi_ordmap = "0.1"
pi_hash = "0.1"
pi_async = "0.1"
pi_async_file = "0.1"
crc32fast = "1.2"
fastcmp = "1.0"
num_cpus = "1.13.0"