[package]
name = "pi_store"
version = "0.2.6"
authors = ["vmos <vmosone007@gmail.com>"]
edition = "2018"
description = "File storage"
repository = "https://github.com/GaiaWorld/pi_store.git"
license = "MIT OR Apache-2.0"
keywords = ["pi", "file", "storage"]

[dependencies]
parking_lot = "0.12"
futures = "0.3"
json = "0.11.13"
log = "0.4"
crc = "3.0"
bytes = "1.4"
lazy_static = "1.4"
fnv = "1.0.3"
tempdir = "0.3"
crossbeam-channel = "0.5"
dashmap = "5.5"
url = "2.2"
pi-async-rt = "0.1"
pi_async_file = "0.5"
pi_async_transaction = "0.2"
async-lock = "2.7"
async-channel = "1.9"
pi_hash_value = "0.1"
pi_bon = "0.2"
pi_handler = "0.1"
pi_atom = "0.2"
pi_gray = "0.1"
pi_guid = "0.1"
pi_util = "0.1"
pi_sinfo = "0.2"
pi_timer = "0.1"
pi_ordmap = "0.2"
pi_hash = "0.1"
crc32fast = "1.2"
fastcmp = "1.0"
num_cpus = "1.16"
pi_assets = "0.13"
pi_share = "0.4"

[dev-dependencies]
env_logger = "0.9"
rand = { version = "0.8", features = ["small_rng"] }
persy = "1.1"